fix horizontal overflow on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,6 +87,7 @@ header {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   box-shadow: 0px 2px 7px rgb(19, 19, 19);
+  overflow-x: hidden;
 }
 
 .logo {
